package com.example.demo.design_pattern.b_hbwxz.b_adapter.eg;

/**
 * @author mars
 * @description Adaptee
 * @date 2023/11/11 23:55
 */
public class Adaptee {
    void speecificRequest(){
        System.out.println("speecificRequest ..");
    }
}
