package com.example.demo.design_pattern.b_hbwxz.b_adapter.eg;

/**
 * @author mars
 * @description Target
 * @date 2023/11/11 23:54
 */
public interface Target {
    void request();
}
